More Backend Changes

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
-    "path": "^0.12.7"
+    "multer": "^2.0.0",
+    "path": "^0.12.7",
+    "xlsx": "^0.18.5"
   }
 }
