--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@vitejs/plugin-react": "^4.7.0",
     "axios": "^1.9.0",
     "emoji-picker-react": "^4.12.2",
+    "lightingcss": "^0.1.0",
     "moment": "^2.30.1",
     "mongodb": "^6.18.0",
     "react-hot-toast": "^2.5.2",
