--- a/frontend/expense_tracker/package.json
+++ b/frontend/expense_tracker/package.json
@@ -19,11 +19,23 @@
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
+    
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "@tailwindcss/vite": "^4.1.7",
+    "@vitejs/plugin-react": "^4.7.0",
+    "axios": "^1.9.0",
+    "emoji-picker-react": "^4.12.2",
+    "lightingcss": "^0.1.0",
+    "moment": "^2.30.1",
+    "mongodb": "^6.18.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3",
+    "tailwindcss": "^4.1.7"
   }
 }
